[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
caesarcipher_extended = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "CaesarCipher.extended"
version = "2.9.1"
description = "Implementation of the Caesar Cipher encryption algorithm in Python. Unlike the classic, it also shifts numbers, symbols & even emojis! Focused on simplicity and Efficiency."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "ViratiAkiraNandhanReddy", email = "contact.viratiakiranandhanreddy+python@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["Caesar Cipher", "encryption", "decryption", "cryptography", "Python", "ViratiAkiraNandhanReddy", "VIRATI AKIRANANDHAN REDDY"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
"Homepage" = "https://viratiakiranandhanreddy.github.io/CaesarCipher.extended/"
"Repository" = "https://github.com/ViratiAkiraNandhanReddy/CaesarCipher.extended"
"Issues" = "https://github.com/ViratiAkiraNandhanReddy/CaesarCipher.extended/issues"
